--- a/index.html
+++ b/index.html
@@ -222,13 +222,16 @@
         <hr>
         <div class="social">
           <div class="fb">
-            <a href=""><i class="fi-social-facebook"></i></a>
+            <a href="https://www.facebook.com/"><i class="fi-social-facebook"></i></a>
+          </div>
+          <div class="fb">
+            <a href="https://www.instagram.com/"><i class="fi-social-instagram"></i></a>
           </div>
           <div class="twitter">
-            <a href=""><i class="fi-social-twitter"></i></a>
+            <a href="https://twitter.com/"><i class="fi-social-twitter"></i></a>
           </div>
           <div class="github">
-            <a href=""><i class="fi-social-github"></i></a>
+            <a href="https://github.com/ismailyou/zurb-foundation"><i class="fi-social-github"></i></a>
           </div>
         </div>
       </div>
@@ -270,29 +273,10 @@
     
   });
 </script>
-
 <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
-
-<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-analytics.js"></script>
-
-<script>
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  var firebaseConfig = {
-    apiKey: "AIzaSyA2JY1Jcd4_f8ajXQ8KmPTQ0F4bgaf15RQ",
-    authDomain: "fondation-e9343.firebaseapp.com",
-    projectId: "fondation-e9343",
-    storageBucket: "fondation-e9343.appspot.com",
-    messagingSenderId: "843579210188",
-    appId: "1:843579210188:web:b63b4a520af32c4a1c8569",
-    measurementId: "G-4LEHXQVRSZ"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  firebase.analytics();
-</script>
+<script src="/__/firebase/8.3.1/firebase-app.js"></script>
+<script src="/__/firebase/8.3.1/firebase-analytics.js"></script>
+<!-- Initialize Firebase -->
+<script src="/__/firebase/init.js"></script>
 </body>
 </html>
